--- a/virtualjoystick/src/main/res/values/attrs.xml
+++ b/virtualjoystick/src/main/res/values/attrs.xml
@@ -22,6 +22,8 @@
 
         <attr name="JV_autoReCenterButtonHorizontal" format="boolean"/>
 
+        <attr name="JV_setInitialValueZeroVertical" format="boolean"/>
+
         <attr name="JV_buttonStickToBorder" format="boolean"/>
 
         <attr name="JV_enabled" format="boolean"/>
